I have completed the design of the form for adding a user. I have added a scrollbar that appears if the content is too long, as the form contains many fields and I want to ensure that they are not hidden.

--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -468,7 +468,7 @@ form {
         width: 100%;
         font-size: 15px;
         font-weight: var(--font-regular);
-        padding: 14px 16px;
+        padding: 10px 16px;
         border-radius: 14px;
         border: 1px solid var(--border100, #EBEEF2);
         outline: none;
@@ -502,7 +502,7 @@ form {
         position: absolute;
         z-index: 1;
         right: 0.18rem;
-        top: 3px;
+        top: 5px;
         font-size: 0.8em;
         background-color: rgba(255, 102, 64, 0.10);
         color: #E94D3F;
@@ -534,20 +534,46 @@ form {
     bottom: 0;
 }
 
-    .modal .modal-content {
-        background-color: var(--surface);
-        border-radius: 16px;
-        box-shadow: 0px 40px 30px -30px rgba(4, 15, 21, 0.15), 0px 50px 50px 0px rgba(4, 15, 21, 0.15);
-        padding: 2rem;
-    }
+.modal-content {
+    background-color: var(--surface);
+    border-radius: 16px;
+    box-shadow: 0px 40px 30px -30px rgba(4, 15, 21, 0.15), 0px 50px 50px 0px rgba(4, 15, 21, 0.15);
+    max-height: 95vh;
+    display: flex;
+    flex-direction: column;
+}
 
-        .modal .modal-content .modal-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 2rem;
-        }
-/* MODAL END*/
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem;
+    padding-bottom: 0rem;
+}
+
+.scroll-container {
+    flex: 1;
+    overflow-y: auto;
+}
+
+.inner-padding {
+    padding: 2rem;
+}
+
+.scroll-container::-webkit-scrollbar {
+    width: 6px;
+}
+
+.scroll-container::-webkit-scrollbar-track {
+    background: var(--surface);
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+    background-color: #bbb;
+    border-radius: 16px;
+}
+
+/* MODAL END */
 
 /* STATUES START */
 
